--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Коллаж изображений</title>
+    <title>Birds</title>
     <style>
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-    <h1>Birds Mag</h1>
+    <h1>Birds</h1>
 
     <div class="gallery" id="gallery"></div>
 
