--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         h1 {
             font-family: "EB Garamond", serif;
             font-size: 200px;
+            font-weight: lighter;
             margin: 20px 0;
+            text-align: left;
         }
         .gallery {
             display: grid;
@@ -42,9 +44,9 @@
             font-family: Arial, sans-serif;
             font-size: 50px;
             color: orange;
-            background: rgba(255, 255, 255, 0.5);
-            padding: 5px;
-            border-radius: 5px;
+            background: transparent;
+            padding: 0px;
+            border-radius: 0px;
         }
     </style>
 </head>
