--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-size: 200px;
             font-weight: lighter;
             margin: 20px 0;
-            text-align: left;
+            align: left;
         }
         .gallery {
             display: grid;
