--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            font-family: Arial, sans-serif;
-            font-size: 50px;
-            color: orange;
+            font-family: "EB Garamond", serif;
+            font-weight: lighter;
+            font-size: 100px;
+            color: black;
             background: transparent;
             padding: 0px;
             border-radius: 0px;
