--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             background-color: #f0f0f0;
         }
         h1 {
             font-family: "EB Garamond", serif;
             font-size: 200px;
             font-weight: lighter;
-            margin: 20px 0;
-            text-align: left !important;
+            margin: 20px;
+            text-align: left;
         }
         .gallery {
             display: grid;
@@ -28,6 +28,7 @@
             width: 100vw;
             max-width: 1200px;
             position: relative;
+            margin-left: 20px;
         }
         .gallery-item {
             position: relative;
@@ -41,13 +42,12 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            font-family: "EB Garamond", serif;
-            font-weight: lighter;
-            font-size: 100px;
-            color: black;
-            background: transparent;
-            padding: 0px;
-            border-radius: 0px;
+            font-family: Arial, sans-serif;
+            font-size: 50px;
+            color: orange;
+            background: rgba(255, 255, 255, 0.5);
+            padding: 5px;
+            border-radius: 5px;
         }
     </style>
 </head>
