--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            font-family: Arial, sans-serif;
-            font-size: 50px;
+            font-family: "EB Garamond", serif;
+            font-size: 100px;
             color: orange;
-            background: rgba(255, 255, 255, 0.5);
-            padding: 5px;
-            border-radius: 5px;
+            background: transparent;
+            padding: 0px;
+            border-radius: 0px;
         }
     </style>
 </head>
