--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            font-family: "EB Garamond", serif;
-            font-size: 100px;
-            color: black;
-            background: transparent;
-            padding: 0;
-            border-radius: 0;
+            font-family: Arial, sans-serif;
+            font-size: 25px;
+            color: white;
+            background: black;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
