--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            font-family: Arial, sans-serif;
-            font-size: 25px;
+            font-family: "EB Garamond", serif;
+            font-size: 20px;
             color: white;
             background: black;
             border-radius: 50%;
