--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="The website displays a randomized gallery of bird images and other illustrations sourced from a GitHub repository.">
     <meta property="og:image" content="bird.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:url" content="https://birds.indexmod.xyz/">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
     <meta name="telegram:image" content="bird.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="310x310" href="bird.png">
+    <link rel="icon" type="image/png" sizes="310x310" href="/favicon/bird.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400..800&display=swap');
