--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="telegram:image" content="bird.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="310x310" href="/favicon/bird.png">
+    <link rel="icon" type="image/png" sizes="310x310" href="bird.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400..800&display=swap');
