--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h1>Birds</h1>
     <div class="container">
         <p>
-            This one-page website features a randomized gallery of bird images and illustrations sourced from a GitHub repository. If you are familiar with GitHub, you are invited to contribute by uploading your own illustrations via
+            This one-page website features a randomized gallery of bird images and illustrations. If you are familiar with GitHub, you are invited to contribute by uploading your own illustrations via
             <a href="https://github.com/indexmod/birds" style="display: inline-block; background: #ddd; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Add</a>.
             If you would like to show your support, you are welcome to
             <a href="https://buymeacoffee.com/indexmod" style="display: inline-block; background: #f5e79e; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Buy me a coffee</a>
