--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birds</title>
-    <meta name="description" content="The website displays a randomized gallery of bird images and other illustrations sourced from a GitHub repository.">
+    <meta name="description" content="This one-page digital zine features a randomized gallery of bird images and illustrations. If you are familiar with GitHub...">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Birds">
-    <meta property="og:description" content="The website displays a randomized gallery of bird images and other illustrations sourced from a GitHub repository.">
+    <meta property="og:description" content="TThis one-page digital zine features a randomized gallery of bird images and illustrations. If you are familiar with GitHub...">
     <meta property="og:image" content="bird.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://birds.indexmod.xyz/">
@@ -16,7 +16,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Birds">
-    <meta name="twitter:description" content="The website displays a randomized gallery of bird images and other illustrations sourced from a GitHub repository.">
+    <meta name="twitter:description" content="This one-page digital zine features a randomized gallery of bird images and illustrations. If you are familiar with GitHub...">
     <meta name="twitter:image" content="bird.png">
 
     <!-- WhatsApp & Telegram -->
