--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             box-shadow: none;
             text-align: left;
             font-size: 20px;
+            line-height: 1.2;
         }
 
         .gallery {
