--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
     <h1>Birds</h1>
     <div class="container">
         <p>
-            This one-page digital zine features a randomized gallery of bird images and illustrations. If you are familiar with GitHub, you are invited to contribute by uploading your own illustrations via
+            This&nbsp;one-page digital zine features a&nbsp;randomized gallery of&nbsp;bird images and&nbsp;illustrations. If&nbsp;you are familiar with&nbsp;GitHub, you are invited to&nbsp;contribute by&nbsp;uploading your&nbsp;own illustrations via
             <a href="https://github.com/indexmod/birds" style="display: inline-block; background: #ddd; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Add</a>.
-            If you would like to show your support, you are welcome to
-            <a href="https://buymeacoffee.com/indexmod" style="display: inline-block; background: #f5e79e; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Buy me a coffee</a>
-            or explore my
-            <a href="https://face.indexmod.xyz/" style="display: inline-block; background: #ddd; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">other work</a>.
-            Thank you
+            If&nbsp;you would like to&nbsp;show your&nbsp;support, you are welcome to&nbsp;
+            <a href="https://buymeacoffee.com/indexmod" style="display: inline-block; background: #f5e79e; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Buy&nbsp;me&nbsp;a&nbsp;coffee</a>
+            or&nbsp;explore my&nbsp;
+            <a href="https://face.indexmod.xyz/" style="display: inline-block; background: #ddd; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">other&nbsp;work</a>.
+            Thank&nbsp;you
         </p>
     </div>
 
