--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h1>Birds</h1>
     <div class="container">
         <p>
-            This&nbsp;one-page digital zine features a&nbsp;randomized gallery of&nbsp;bird images and&nbsp;illustrations. If&nbsp;you are familiar with&nbsp;GitHub, you are invited to&nbsp;contribute by&nbsp;uploading your&nbsp;own illustrations via
+            This&nbsp;one-page digital zine features a&nbsp;randomized gallery of&nbsp;bird images and&nbsp;accidental illustrations. If&nbsp;you are familiar with&nbsp;GitHub, you are invited to&nbsp;contribute by&nbsp;uploading your&nbsp;own illustrations via
             <a href="https://github.com/indexmod/birds" style="display: inline-block; background: #ddd; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Add</a>.
             If&nbsp;you would like to&nbsp;show your&nbsp;support, you are welcome to&nbsp;
             <a href="https://buymeacoffee.com/indexmod" style="display: inline-block; background: #f5e79e; padding: 2px 6px; border-radius: 10px; text-decoration: none; color: black;">Buy&nbsp;me&nbsp;a&nbsp;coffee</a>
