--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="310x310" href="bird.png">
 
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(100338471, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/100338471" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400..800&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Verdana:wght@400&display=swap');
